Fix CSS on Firefox

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@
 /* ------------------------------ BODIES ------------------------------------ */
 
 defs g *,
-#bodies use * {
+#bodies * {
 	stroke:red;
 	stroke-width:1.25;
 	fill:white;
